--- a/thesis/02-nmt.tex
+++ b/thesis/02-nmt.tex
@@ -11,7 +11,7 @@
 % RNN
 % Trafo
 
-\gls{nmt} is the current state-of-the-art approach to \gls{mt}. As the name
+\Gls{nmt} is the current state-of-the-art approach to \gls{mt}. As the name
 suggests, the underlying machine learning concept in \gls{nmt} systems are
 neural networks. The specific types, or \emph{architectures}, of neural
 networks used in an \gls{nmt} system vary across history, applications, or
@@ -588,7 +588,6 @@ or beam search optimization methods, mostly based on reinforcement learning
 \citep{williams, rush-bso, mixer}. However, none of these methods was widely
 adopted, and current models are believed to be capable of recover from their
 errors despite being explicitly trained to do so.
-
 
 
 
