--- a/thesis/05-experiments.tex
+++ b/thesis/05-experiments.tex
@@ -51,7 +51,9 @@ million sentence pairs, we oversample the dataset by a factor of 10 for the 100M
 backtranslation version or 14 for the 150M backtranslation version.
 
 
+%\input{end-end.tex}
 
+%\input{improving.tex}
 
 %%% Local Variables:
 %%% mode: latex
