--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -1,21 +1,21 @@
-\newacronym{nmt}{NMT}{Neural Machine Translation}
-\newacronym{nlp}{NLP}{Natural Language Processing}
-\newacronym{rnn}{RNN}{Recurrent Neural Network}
-\newacronym{cnn}{CNN}{Convolutional Neural Network}
-\newacronym{san}{SAN}{Self-Attentive Network}
-\newacronym{ai}{AI}{Artificial Intelligence}
-\newacronym{mmt}{MMT}{Multimodal Machine Translation}
+\newacronym{nmt}{NMT}{neural machine translation}
+\newacronym{nlp}{NLP}{natural language processing}
+\newacronym{rnn}{RNN}{Recurrent neural network}
+\newacronym{cnn}{CNN}{convolutional neural network}
+\newacronym{san}{SAN}{Self-attentive network}
+\newacronym{ai}{AI}{Artificial intelligence}
+\newacronym{mmt}{MMT}{Multimodal machine translation}
 \newacronym{wmt}{WMT}{Conference on Machine Translation}
-\newacronym{ml}{ML}{Machine Learning}
+\newacronym{ml}{ML}{Machine learning}
 \newacronym{lstm}{LSTM}{Long Short-Term Memory}
 \newacronym{gru}{GRU}{Gated Recurrent Unit}
 \newacronym{relu}{ReLU}{Rectified Linear Unit}
-\newacronym{mt}{MT}{Machine Translation}
-\newacronym{ape}{APE}{Automatic MT Post-Editing}
-\newacronym{lm}{LM}{Language Model}
+\newacronym{mt}{MT}{Machine translation}
+\newacronym{lm}{LM}{Language model}
 \newacronym{oov}{OOV}{out-of-vocabulary}
 \newacronym{bpe}{BPE}{byte-pair encoding}
-\newacronym{nat}{NAT}{Non-Autoregressive NMT}
-\newacronym{ctc}{CTC}{Connectionist Temporal Classification}
-\newacronym{npd}{NPD}{Noisy parallel decoding}
-\newacronym{bleu}{BLEU}{Bilingual evaluation understudy}
+\newacronym{nat}{NAT}{non-autoregressive NMT}
+\newacronym{nar}{NAR}{non-autoregressive}
+\newacronym{ctc}{CTC}{connectionist temporal classification}
+\newacronym{npd}{NPD}{noisy parallel decoding}
+\newacronym{bleu}{BLEU}{bilingual evaluation understudy}
