added anthology adn transformer picture

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -291,7 +291,7 @@ I understand that my work relates to the rights and obligations
 \cleardoublepage{}
 \bibliographystyle{csplainnat}
 \addcontentsline{toc}{chapter}{Bibliography}
-{\small \bibliography{references}}
+{\small \bibliography{references,anthology}}
 
 \cleardoublepage{}
 \addcontentsline{toc}{chapter}{List of Publications}
