--- a/thesis/list_of_publications.tex
+++ b/thesis/list_of_publications.tex
@@ -97,7 +97,7 @@ TODO tohle se musí přepsat
 
 \vspace{1cm}
 
-\noindent Only publication relevant to this thesis are included. The number of
+\noindent Only publications relevant to this thesis are included. The number of
 citations was computed using Google Scholar. Total number of citations of
 publication related to the topic of the thesis (without self-citations):
 {\large 77} (by the thesis submission on March 21, 2019).
